# mumo

./: .gitignore  LICENSE  README.md  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
pymumo/: mmeaf.mmeaf  pymumo.ipynb  pyproject.toml
pymumo/src/mumo/: __init__.py  _parse.py  analytics.py  dataframes.py  doc.py  sqlite.py  views.py
pymumo/tests/: conftest.py  test_crossref.py  test_dataframes.py  test_doc.py  test_sqlite.py
pymumo/tests/fixtures/: test.mmeaf
scripts/: migrate_mmeaf.py  prepare.js
