[project]
name = "pymumo"
version = "0.1.0"
description = "Python library for reading and analysing MMEAF (mumo) files"
requires-python = ">=3.11"
dependencies = ["pympi-ling>=1.70"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mumo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
